#149 [root] Add virtual threads doc